# pygame_summer_game_jam_2022

./: .gitignore  README.md  main.py
C_libs/Filter/: CMakeLists.txt  filter.cpp  setup.py
C_libs/RayCasting/: CMakeLists.txt  casting.cpp  setup.py
data/mini_game/Bat/: Bat.kra
data/mini_game/Character/: Main.kra
data/mini_game/Cursy/: Curs.kra
data/mini_game/Zombie/: Zombie.kra
data/pause_menu/: pause_menu.pdn
scripts/: display.py  end_screen.py  furniture.py  game.py  pause_menu.py  player.py  room.py  splash_screen.py  text.py  tv_mini_game.py
